@@ -43,7 +43,7 @@ rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20120905
+version 20120917
 
 =head1 AUTHOR
 
