@@ -1,3 +1,5 @@
+20120917 (840 prefixes)
+  added: category,ero,interval
 20120905 (837 prefixes)
   added: flow,osmsemnet,wfprov
 
